Ensure gallery post titles are center aligned
This fixes an issue where gallery post titles were not aligned with the
rest of the post content.

--- a/style.css
+++ b/style.css
@@ -1145,6 +1145,9 @@ h3.widget-title {
 		margin: 0 auto;
 		max-width: 565px;
 	}
+	article.post.format-gallery .entry-title {
+		display: block;
+	}
 	/* Footer */
 	footer#colophon {
 		border-top: 1px solid #e1e1e1;
